...
            android:defaultValue="@null"
            app:argType="string"
            app:nullable="true" />

        <action
            android:id="@+id/action_patientNoCardFragment_to_patientCollectPhoneFragment"
            app:destination="@id/patientCollectPhoneFragment" />
    </fragment>

    <fragment
        android:id="@+id/patientCollectPhoneFragment"
        android:name="com.vaxcare.vaxhub.ui.patient.edit.PatientEditCollectPhoneFragment"
        android:label="PatientEditCollectPhoneFragment"
...
